--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class="right-nav">
+        <span>CATS FACTS</span>
+    </div>
+    <div class="left-nav">
+        <ul>
+            <li id="home-link">home</li>
+            <li id="category-link">Cats</li>
+            <li id="contact">contact</li>
 
 
 
