--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-    
+    <div class="right-nav">
+        <span>CATS FACTS</span>
+    </div>
+    <div class="left-nav">
+
 
 
 
