added home section

--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <!-- adding nav-->
+    <nav>
     <div class="right-nav">
         <span>CATS FACTS</span>
     </div>
     <div class="left-nav">
+        <ul>
+            <li id="home-link">home</li>
+            <li id="category-link">Cats</li>
+            <li id="contact">contact</li>
+            </ul>
+          </div>
+        </nav>
 
-
-
-
-
-
-
-
+<!-- Home section starts  -->
+    <section class="Home-Page">
+        <div class="Left-home">
+            <h2>The right Place to learn <br>Cat Facts.</h2>
+        </div>
+        <div class="Right-home">
+            <img src="./images/cat1.png" alt="">
+        </div>
+    </section>
+<!-- Home section ends -->
 
 
 
