--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
 
 
 
+<!-- Cat section starts -->
+<section class="cats-section-page">
+    <!-- <div class="Cat-title">
+        <span>Cat Facts</span>
+    </div> -->
+
+    <div class="container mt-5" id="main-container">
+        <div class="row mt-3 mb-3" id="cat-categories" hidden>
+            <h3>CATS FACTS</h3>
+        </div>
+    </div>
+</section>
+
+
+
 
 
 
