added contact section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
 </section>
 
 
+<!-- contact section starts -->
+<section class="contact-page">
+    <form >
+        <div id="contact-txt">
+            <h1>CONTACT US</h1>
+            <P>We are here to help you, Feel free to Reach Us.</P>
+        </div>
+        <div id="contact-info">
+            <input type="text" placeholder="Name">
+            <input type="email"placeholder="Email">
+            <textarea ></textarea>
+        </div>
+        <div id="contact-submit">
+            <button type="submit">
+                submit
+            </button>
+        </div>
+    </form>
+</section>
+<!-- contact section ends -->
+
+
 
 
 
